feat(server): 添加获取成员列表接口