@@ -2,14 +2,19 @@ package org.pi.server.service.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.update.UpdateWrapper;
+import com.baomidou.mybatisplus.core.metadata.IPage;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import lombok.RequiredArgsConstructor;
 import org.pi.server.mapper.HostMapper;
 import org.pi.server.mapper.TeamMapper;
 import org.pi.server.mapper.TeamUserMapper;
+import org.pi.server.mapper.UserMapper;
 import org.pi.server.model.entity.Host;
 import org.pi.server.model.entity.Team;
 import org.pi.server.model.entity.TeamUser;
+import org.pi.server.model.entity.User;
+import org.pi.server.service.AliyunOssService;
 import org.pi.server.service.RedisService;
 import org.pi.server.service.TeamService;
 import org.pi.server.utils.CodeUtils;
@@ -21,8 +26,10 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Instant;
 import java.time.LocalDateTime;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * @author hu1hu
@@ -35,6 +42,9 @@ public class TeamServiceImpl extends ServiceImpl<TeamMapper, Team> implements Te
     private final RedisService redisService;
     private final QRCodeUtils qrCodeUtils;
     private final HostMapper hostMapper;
+    private final UserMapper userMapper;
+    private final AliyunOssService aliyunOssService;
+    private final TeamMapper teamMapper;
 
     /**
      * 创建团队
@@ -89,21 +99,82 @@ public class TeamServiceImpl extends ServiceImpl<TeamMapper, Team> implements Te
      * @return 团队列表
      */
     @Override
-    public List<Team> list(String userID) {
+    public IPage<Team> list(String userID, int page, int size) {
+        // 第一步：分页查询 TeamUser 表
         QueryWrapper<TeamUser> queryWrapper = new QueryWrapper<>();
         queryWrapper.eq("user_id", Long.parseLong(userID));
         queryWrapper.select("team_id");
-        List<TeamUser> teamUserList = teamUserMapper.selectList(queryWrapper);
-        System.out.println(teamUserList.toString());
-        if (teamUserList.isEmpty()) {
-            return List.of();
-        }
-        List<Integer> teamIds = teamUserList.stream().map(TeamUser::getTeamId).toList();
+
+        // 获取 TeamUser 分页结果
+        IPage<TeamUser> teamUserPage = teamUserMapper.selectPage(new Page<>(page, size), queryWrapper);
+        List<Integer> teamIds = teamUserPage.getRecords().stream()
+                .map(TeamUser::getTeamId)
+                .collect(Collectors.toList());
+
         if (teamIds.isEmpty()) {
-            return List.of();
+            // 如果没有 team_id，则返回空的分页对象
+            return new Page<>();
         }
-        System.out.println(teamIds);
-        return listByIds(teamIds);
+
+        // 第二步：根据 team_id 列表查询 Team 表
+        QueryWrapper<Team> teamQueryWrapper = new QueryWrapper<>();
+        teamQueryWrapper.in("id", teamIds);
+
+        // 获取 Team 分页结果
+        IPage<Team> teamPage = teamMapper.selectPage(new Page<>(page, size), teamQueryWrapper);
+        teamPage.setTotal(teamUserPage.getTotal());
+        teamPage.setCurrent(teamUserPage.getCurrent());
+        return teamPage;
+    }
+
+    /**
+     * 获取团队成员列表
+     * @param userID 用户ID
+     * @param teamID 团队ID
+     * @param page 页码
+     * @param size 大小
+     * @return 成员列表 、 null 无权限
+     */
+    @Override
+    public IPage<Map<String, Object>> members(String userID, String teamID, int page, int size) {
+        QueryWrapper<TeamUser> queryWrapper = new QueryWrapper<>();
+        queryWrapper.eq("team_id", teamID);
+        queryWrapper.eq("user_id", userID);
+        if (!teamUserMapper.exists(queryWrapper)) {
+            // 无权限
+            return null;
+        }
+        queryWrapper = new QueryWrapper<>();
+        queryWrapper.eq("team_id", teamID);
+        IPage<TeamUser> teamUserPage = teamUserMapper.selectPage(new Page<>(page, size), queryWrapper);
+        List<Long> userIds = teamUserPage.getRecords().stream()
+                .map(TeamUser::getUserId)
+                .collect(Collectors.toList());
+        if (userIds.isEmpty()) {
+            return new Page<>();
+        }
+        QueryWrapper<User> userQueryWrapper = new QueryWrapper<>();
+        userQueryWrapper.in("id", userIds);
+        IPage<User> userPage = userMapper.selectPage(new Page<>(page, size), userQueryWrapper);
+        // 将 IPage<User> 转换为 IPage<Map<String, Object>>
+        IPage<Map<String, Object>> resultPage = new Page<>(userPage.getCurrent(), userPage.getSize(), userPage.getTotal());
+        List<Map<String, Object>> records = userPage.getRecords().stream()
+                .map(user -> {
+                    Map<String, Object> map = new HashMap<>();
+                    map.put("id", user.getId());
+                    map.put("userName", user.getUsername());
+                    String avatar = user.getAvatar();
+                    if (avatar != null && !avatar.startsWith("http")) {
+                        avatar = aliyunOssService.generateSignedURL(avatar);
+                    }
+                    map.put("avatar", user.getAvatar());
+                    return map;
+                })
+                .collect(Collectors.toList());
+        resultPage.setRecords(records);
+        resultPage.setTotal(teamUserPage.getTotal());
+        resultPage.setCurrent(teamUserPage.getCurrent());
+        return resultPage;
     }
 
     /**
